<resources>
    <string name="app_name">Fortnite Companion App</string>
    <string name="username">Username</string>
    <string name="platform">Platform</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_total_wins">Wins</string>
    <string name="label_total_kills">Kills</string>
    <string name="label_win_percentage">Win%</string>
    <string name="label_score">Score</string>
    <string name="label_kill_death_ratio">K/d</string>
    <string name="label_matches_played">Games</string>
    <string name="label_edit_username">Change username:</string>
    <string name="settings">Settings</string>
    <string name="stats">User Stats</string>
    <string name="challenges">Weekly challenges</string>
    <string name="comparison">Compare stats</string>
    <string-array name="platforms_array">
        <item name="pc">pc</item>
        <item name="psn">psn</item>
        <item name="xbl">xbl</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
